# pixiv-plugin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_en.md  main.py  pyproject.toml  setup_token.py
.claude-plugin/: marketplace.json  plugin.json
commands/: download.md  search-illusts.md  trending.md
skills/pixiv-explorer/: SKILL.md
skills/pixiv-explorer/references/: pixiv-api-guide.md
